@@ -1,3 +1,8 @@
+2003-02-08    <smulloni@smullbola.smullyan.org>
+
+	* SkunkWeb/Services/product/loader.py (get_product_path): added
+	useful little function.
+
 2003-02-08  Jacob Smullyan  <smulloni@smullyan.org>
 
 	* pylibs/xmlrpchandler.py: fix for methodSignature, whose purpose
